[gd_scene load_steps=11 format=3 uid="uid://coolf5fgagyit"]

[ext_resource type="Script" uid="uid://cg7qehiywpmll" path="res://script/taman_scene.gd" id="1_fidrp"]
[ext_resource type="Texture2D" uid="uid://c7qsgudo7a5pr" path="res://assets/background/taman.png" id="2_8bfxq"]
[ext_resource type="PackedScene" uid="uid://cplohm4qwairv" path="res://scene/taman_puzzle_answer.tscn" id="2_mv1l7"]
[ext_resource type="Texture2D" uid="uid://cv2xix07t3hqt" path="res://assets/taman_scene/yellow_box.png" id="3_0xsxi"]
[ext_resource type="FontFile" uid="uid://canqi47ujuyl7" path="res://assets/fonts/Dosis-Medium.ttf" id="4_w1xo8"]
[ext_resource type="PackedScene" uid="uid://fkdu00lqfjkp" path="res://scene/aruna.tscn" id="6_ducrn"]
[ext_resource type="Texture2D" uid="uid://cx2tl4dwkydae" path="res://assets/taman_scene/question_mark.png" id="6_qj8sn"]

[sub_resource type="Animation" id="Animation_8bfxq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("question:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(960, -191)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("question:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("background:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("taman_puzzle_answer:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-826, 240)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("taman_puzzle_answer4:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-812, 613)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("taman_puzzle_answer3:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1892, 613)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("taman_puzzle_answer2:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1882, 240)]
}

[sub_resource type="Animation" id="Animation_w1xo8"]
resource_name = "start_quiz"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("question:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(960, -191), Vector2(960, 189)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("question:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("background:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.67451, 0.67451, 0.67451, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("taman_puzzle_answer:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-848, 240), Vector2(122, 240)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("taman_puzzle_answer2:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1918, 240), Vector2(904, 240)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("taman_puzzle_answer4:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-829, 613), Vector2(122, 613)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("taman_puzzle_answer3:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1933, 613), Vector2(904, 613)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8bfxq"]
_data = {
&"RESET": SubResource("Animation_8bfxq"),
&"start_quiz": SubResource("Animation_w1xo8")
}

[node name="taman_scene" type="Node2D"]
script = ExtResource("1_fidrp")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_8bfxq")
}

[node name="background" type="TextureRect" parent="."]
offset_right = 1920.0
offset_bottom = 1077.0
texture = ExtResource("2_8bfxq")
expand_mode = 1

[node name="question" type="Sprite2D" parent="."]
position = Vector2(960, -191)
scale = Vector2(0.8, 0.8)
texture = ExtResource("3_0xsxi")

[node name="Label" type="Label" parent="question"]
offset_left = -491.0
offset_top = -147.0
offset_right = 812.0
offset_bottom = 89.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_w1xo8")
theme_override_font_sizes/font_size = 53
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="QuestionMark" type="Sprite2D" parent="question"]
position = Vector2(-765, -87.5)
texture = ExtResource("6_qj8sn")
offset = Vector2(-15, 0)

[node name="Node2D" type="Node2D" parent="."]
position = Vector2(1415, 0)

[node name="aruna" parent="Node2D" instance=ExtResource("6_ducrn")]

[node name="taman_puzzle_answer" parent="." instance=ExtResource("2_mv1l7")]
offset_left = -826.0
offset_top = 240.0
offset_right = 26.0
offset_bottom = 771.0

[node name="taman_puzzle_answer2" parent="." instance=ExtResource("2_mv1l7")]
offset_left = 1882.0
offset_top = 240.0
offset_right = 2734.0
offset_bottom = 771.0

[node name="taman_puzzle_answer3" parent="." instance=ExtResource("2_mv1l7")]
offset_left = 1892.0
offset_top = 613.0
offset_right = 2744.0
offset_bottom = 1144.0

[node name="taman_puzzle_answer4" parent="." instance=ExtResource("2_mv1l7")]
offset_left = -812.0
offset_top = 613.0
offset_right = 40.0
offset_bottom = 1144.0

[connection signal="answer_revealed" from="taman_puzzle_answer" to="." method="_on_taman_puzzle_answer_answer_revealed"]
[connection signal="last_question_done" from="taman_puzzle_answer" to="." method="_on_taman_puzzle_answer_last_question_done"]
[connection signal="answer_revealed" from="taman_puzzle_answer2" to="." method="_on_taman_puzzle_answer_answer_revealed"]
[connection signal="last_question_done" from="taman_puzzle_answer2" to="." method="_on_taman_puzzle_answer_last_question_done"]
[connection signal="answer_revealed" from="taman_puzzle_answer3" to="." method="_on_taman_puzzle_answer_answer_revealed"]
[connection signal="last_question_done" from="taman_puzzle_answer3" to="." method="_on_taman_puzzle_answer_last_question_done"]
[connection signal="answer_revealed" from="taman_puzzle_answer4" to="." method="_on_taman_puzzle_answer_answer_revealed"]
[connection signal="last_question_done" from="taman_puzzle_answer4" to="." method="_on_taman_puzzle_answer_last_question_done"]
